deploy/webhook-deployment-template.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: "volume-initializer"
webhooks:
- name: "volume-initializer.storage.kubesphere.io"
  rules:
  - apiGroups:   [""]
    apiVersions: ["v1"]
    operations:  ["CREATE"]
    resources:   ["pods"]
    scope:       "*"
  clientConfig:
    service:
      namespace: ${NAMESPACE}
      name: ${SERVICE}
      path: "/pods"
    caBundle: ${CA_BUNDLE}
  admissionReviewVersions: ["v1"]
  sideEffects: None
  failurePolicy: Ignore
  timeoutSeconds: 5
---
  kind: ClusterRoleBinding
  apiVersion: rbac.authorization.k8s.io/v1
  metadata:
    name: volume-initializer
    labels:
      role: controller
  subjects:
    - kind: ServiceAccount
      name: volume-initializer
      namespace: ${NAMESPACE}
  roleRef:
    kind: ClusterRole
    name: volume-initializer
    apiGroup: rbac.authorization.k8s.io
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: volume-initializer
  namespace: ${NAMESPACE}
  labels:
    app: volume-initializer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: volume-initializer
  template:
    metadata:
      labels:
        app: volume-initializer
    spec:
      containers:
      - name: volume-initializer
        image: registry.cn-hangzhou.aliyuncs.com/stoneshiyunify/volume-initializer:latest
        imagePullPolicy: Always
        args: ['--tls-cert-file=/etc/run/certs/tls.crt', '--tls-private-key-file=/etc/run/certs/tls.key']
        ports:
        - containerPort: 443
        volumeMounts:
          - name: volume-initializer-webhook-certs
            mountPath: /etc/run/certs
            readOnly: true
      volumes:
        - name: volume-initializer-webhook-certs
          secret:
            secretName: volume-initializer
      serviceAccountName: volume-initializer
---
apiVersion: v1
kind: Service
metadata:
  name: volume-initializer
  namespace: ${NAMESPACE}
spec:
  selector:
    app: volume-initializer
  ports:
    - protocol: TCP
      port: 443
      targetPort: 443
