deploy/webhook-deployment.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: "volume-initializer"
webhooks:
- name: "volume-initializer"
  rules:
  - apiGroups:   [""]
    apiVersions: ["v1"]
    operations:  ["CREATE"]
    resources:   ["pods"]
    scope:       "*"
  clientConfig:
    service:
      namespace: default
      name: volume-initializer
      path: "/pods"
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURNekNDQWh1Z0F3SUJBZ0lVUUlBMW96UlhzbHF6VzhFSDQ5bE5qQ2Yrb2xBd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0tURW5NQ1VHQTFVRUF3d2VkbTlzZFcxbExXbHVhWFJwWVd4cGVtVnlMbVJsWm1GMWJIUXVjM1pqTUI0WApEVEkwTURneU56QTNNRFl3TTFvWERUSTBNRGt5TmpBM01EWXdNMW93S1RFbk1DVUdBMVVFQXd3ZWRtOXNkVzFsCkxXbHVhWFJwWVd4cGVtVnlMbVJsWm1GMWJIUXVjM1pqTUlJQklqQU5CZ2txaGtpRzl3MEJBUUVGQUFPQ0FROEEKTUlJQkNnS0NBUUVBb1J1T2F1MnhUcWR6ZnEvRzhZOE1Ga0VtcDNCbjdTdHRDaVVuT1BMZXdOV1U2Rzk0WVJicQpvd0FyV01SWGg0em [...]
  admissionReviewVersions: ["v1"]
  sideEffects: None
  failurePolicy: Ignore
  timeoutSeconds: 5
---
  kind: ClusterRoleBinding
  apiVersion: rbac.authorization.k8s.io/v1
  metadata:
    name: volume-initializer
    labels:
      role: controller
  subjects:
    - kind: ServiceAccount
      name: volume-initializer
      namespace: default
  roleRef:
    kind: ClusterRole
    name: volume-initializer
    apiGroup: rbac.authorization.k8s.io
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: volume-initializer
  namespace: default
  labels:
    app: volume-initializer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: volume-initializer
  template:
    metadata:
      labels:
        app: volume-initializer
    spec:
      containers:
      - name: volume-initializer
        image: stoneshiyunify/volume-initializer:latest
        imagePullPolicy: Always
        args: ['--tls-cert-file=/etc/run/certs/tls.crt', '--tls-private-key-file=/etc/run/certs/tls.key']
        ports:
        - containerPort: 443
        volumeMounts:
          - name: volume-initializer-webhook-certs
            mountPath: /etc/run/certs
            readOnly: true
      volumes:
        - name: volume-initializer-webhook-certs
          secret:
            secretName: volume-initializer
      serviceAccountName: volume-initializer
      serviceAccount: volume-initializer
---
apiVersion: v1
kind: Service
metadata:
  name: volume-initializer
  namespace: default
spec:
  selector:
    app: volume-initializer
  ports:
    - protocol: TCP
      port: 443
      targetPort: 443
